force-app/main/default/objects/ChecklistQuestion__c/ChecklistQuestion__c.object-meta.xml
<CustomObject>
    <description>This object is for template questions which can be asked by sales representative when using the visit reporting feature. There can be multiple questions grouped in a section of a checklist, of different types.</description>
    <label>Checklist Question</label>
    <nameField>
        <displayFormat>QT-{0000}</displayFormat>
        <label>Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>