force-app/main/default/objects/ChecklistQuestion__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field determines if a question template is available to use.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>