force-app/main/default/objects/ChecklistQuestion__c/fields/ChecklistSection__c.field-meta.xml
<CustomField>
    <fullName>ChecklistSection__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field determines the checklist section of which the question will be part of.</description>
    <inlineHelpText>This field determines the checklist section of which the question will be part of.</inlineHelpText>
    <label>Checklist Section</label>
    <referenceTo>ChecklistSection__c</referenceTo>
    <relationshipLabel>Checklist Questions</relationshipLabel>
    <relationshipName>Checklist_Question_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>