force-app/main/default/objects/ChecklistQuestion__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <label>Question Text</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>